# superfactorymanager

./: .gitignore  FUNDING.yml  PERFORMANCE.md  README.md  RELEASE_PROCESS.md  TROUBLESHOOTING.md  build.gradle  crowdin-browserscript-v02.js  gradle.properties  todo.md
.run/: CollectionIterationBenchmark.run.xml
actions/: Collect jars.ps1  Get-DiscussionAsMarkdown.ps1  Open IntelliJ IDEA.ps1  Open libs dirs.ps1  Replace pattern with record name.ps1  Run gameTestServer for all versions.ps1  Update PrismMC test instances to use latest build output.ps1
ai/: README.md  snake.xcf
ai/anim/: arrow.ipynb
ai/javaparser/: ask_relevant.ipynb  ask_relevant_structured.ipynb  instructor.ipynb  ollama.ipynb  run_java.ipynb
ai/latency-test/: Cargo.toml  intellij-refresh-from-disk.ipynb  sine.txt
ai/latency-test/src/: main.rs
ai/modular/some_func/: out.txt  src.py
ai/rewrite/: chatgpt_extension_server.py  explore.rest  start.ps1
ai/rewrite/chatgpt_extension/: content.js  popup-input.css  popup-output.css  popup.html  popup.js  summary.md
ai/rewrite/common/: add_cell_to_notebook.py  archive_run.py  focus_build_tab.py  focus_intellij.py  generate.py  generate_gpt4.py  get_agent_content.py  get_build_output.py  get_guts.py  hot_reload.py  indent_text.py  is_building.py  is_happy_build_output.py  read_test.py  run_test.py  save_convo.py  with_agent_content.py  write_test.py
ai/rewrite/old/: chatgpt meta.ipynb  chatgpt.ipynb  decomposer.ipynb  make it so.ipynb
ai/rewrite/picker/: picker.ipynb
ai/rewrite/reload_test/: hotreload.py  loader.ipynb  updater.ipynb
ai/templating/: code_llama.ipynb  code_llama.rest  convo.md  hotkey_test.ipynb  infill.ipynb  learning.ipynb  multi_step.ipynb  prompt.txt  runner_comms.ipynb  single_step.ipynb  single_step_local.ipynb
ai/templating/messages/: run_2023-09-23_01-19-19.txt  run_2023-09-23_01-28-42.txt  run_2023-09-24_14-45-22.txt  run_2023-10-02_21-58-18.txt
ai/templating/questioning/: ask a question.ipynb
ai/transcript/: README.md  open door observation 1.txt  test.ps1  untitled.txt
docs/: AGENTS.md  RELEASE_PROCESS.md  merging after the repo restructuring.md  notes.md
emc_experiment/emc_finder/src/: preprocess.rs
examples/: 03-conditions.sfm  README.md
gradle/wrapper/: gradle-wrapper.properties
platform/cli/sfm-propagate-changes/: Cargo.toml  README.md  build.rs  check-all.ps1  clippy.toml  install.ps1
platform/cli/sfm-propagate-changes/resources/: app.rc  make-all-icons.ps1
platform/cli/sfm-propagate-changes/src/: lib.rs  main.rs  propagate.rs  sfm_path.rs  state.rs  worktree.rs
platform/cli/sfm-propagate-changes/src/cli/: build.rs  cache.rs  check.rs  cli.rs  client.rs  compile.rs  datagen.rs  gametest.rs  gradle.rs  home.rs  jar.rs  jars.rs  merge.rs  mod.rs  push.rs  repo_root.rs  server.rs  status.rs  test.rs
platform/cli/sfm-propagate-changes/src/logging/: logging_config.rs  logging_init.rs  mod.rs
platform/cli/sfm-propagate-changes/src/paths/: app_home.rs  cache.rs  mod.rs
platform/cli/translation-helper/: Cargo.toml  rustfmt.toml
platform/minecraft/: build.gradle  gradle.properties  intellij-java-code-style.xml  settings.gradle
platform/notepad-plus-plus/npp/: SFML.xml
platform/pwsh/: profile.ps1
platform/visual-studio-code/super-factory-manager-language/: TODO.md  package-lock.json  tsconfig.json  vsc-extension-quickstart.md
src/gametest/: README.md
src/gametest/resources/: sfm.mixins.gametest.json  sfm.mixins.json
src/main/resources/: pack.mcmeta  sfm.mixins.json
translation-helper/: Cargo.toml
translation-helper/src/: commands.rs  config.rs  game_version.rs  language_file.rs  language_file_path.rs  main.rs  repository.rs  source_set.rs  source_set_path.rs
translation-helper/src/cli/: args.rs  global_args.rs  mod.rs
translation-helper/src/command/language_file/: language_file_check_command.rs  language_file_list_command.rs  language_file_open_command.rs  mod.rs
translation-helper/src/domain_object/: language_file.rs  mod.rs  repo_path.rs  repository.rs  source_set.rs  source_set_path.rs
vscodeextension/super-factory-manager-language/: CHANGELOG.md  README.md  package-lock.json  package.json
vscodeextension/super-factory-manager-language/src/: extension.ts
vscodeextension/super-factory-manager-language/syntaxes/: SFML.g4  sfml.tmLanguage.json
vscodeextension/super-factory-manager-language/tests/: markdown.md
vscodeextension/super-factory-manager-language/vsce-versions/: super-factory-manager-language-0.0.11.vsix  (+1 more)
(+1626 files in other folders)
