[package]
name = "translation_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eye_config = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
git2 = "0.18"
holda = { version = "0.1.0", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive"] }
itertools = "0.14.0"
tokio = { version = "1.46.1", features = ["full"] }
