[package]
name = "sfm-propagate-changes"
version = "0.1.0"
edition = "2024"
authors = ["TeamDman"]
description = "CLI tool for propagating git changes across Minecraft version worktrees"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/TeamDman/SuperFactoryManager"
keywords = ["cli", "git", "minecraft", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.43"
color-eyre = "0.6.5"
directories-next = "2.0.0"
dunce = "1.0.5"
eyre = "0.6.12"
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-styx = { git = "https://github.com/bearcove/styx", version = "1.0.1" }
# figue = { git = "https://github.com/bearcove/figue", branch = "main" }
figue = { git = "https://github.com/TeamDman/figue", branch = "teamy-positional-bug" }
glob = "0.3.3"
open = { version = "5.3.3", features = ["shellexecute-on-windows"] }
rand = "0.9.2"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
teamy-windows = "0.9.0"

[build-dependencies]
embed-resource = "3.0.6"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
multiple_crate_versions = "allow" # turn this off periodically to see how bad it has gotten :P
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives
multiple_unsafe_ops_per_block = "deny"
module_inception = "allow"
allow_attributes = "deny"
# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "allow" # facet macros use Unicode identifiers
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
